<resources>
    <string name="app_name">CashApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_cash">CashActivity</string>
    <string name="title_home">CashManager</string>
    <string name="title_dashboard">Shopping list</string>
    <string name="title_notifications">Payment</string>

    <string name="title_activity_modal_main">modalMain</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_id">Product id. (click to enter manually)</string>
    <string name="product_info_empty">No product selected. Start scanning or enter the ID manually</string>
    <!-- GOLBAL -->
    <string name="appname">CashManager</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="version">v1</string>
    <!-- HOME FRAGMENT STRINGS -->
    <string name="home_empty_list">Your list is empty</string>
    <string name="home_empty_list_button">Start scanning</string>
    <!-- SCANNING STRINGS -->
    <string name="scan_not_valid">Can\'t validate empty article</string>
    <!-- PAYMENT STRINGS -->
    <string name="payment_snackbar">You are entering payment area, for security reason you can\'t update Cart anymore</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirm">Are you sure you wan\'t to cancel ?</string>
    <!-- ARTICLE STRINGS -->
    <string name="moins">Less</string>
    <string name="plus">More</string>
    <string name="delete">Delete</string>
    <!-- LOGIN ACTIVITY -->
    <string name="logtitle">To continue, you must enter a valid CASHMANAGER v1 SERVER</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="password">Server password</string>
    <string name="connect">Connect</string>
</resources>
